objects/EUR_ISP_Volume_Change_History__c.object
<CustomObject>
    <fields>
        <fullName>EUR_ISP_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Date_Time__c</fullName>
        <label>Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Activity_Amount__c</fullName>
        <label>New Value - Activity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Activity_End_Date__c</fullName>
        <label>New Value - Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Activity_Start_Date__c</fullName>
        <label>New Value - Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Approval_Status__c</fullName>
        <label>New Value - Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Per_Unit_Amount__c</fullName>
        <label>New Value - Per Unit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Status__c</fullName>
        <label>New Value - Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Total_Spend_Item__c</fullName>
        <label>New Value - Total Spend Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Value_Volume__c</fullName>
        <label>New Value - Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Activity_Amount__c</fullName>
        <label>Old Value - Activity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Activity_End_Date__c</fullName>
        <label>Old Value - Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Activity_Start_Date__c</fullName>
        <label>Old Value - Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Approval_Status__c</fullName>
        <label>Old Value - Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Per_Unit_Amount__c</fullName>
        <label>Old Value - Per Unit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Status__c</fullName>
        <label>Old Value - Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Total_Spend_Item__c</fullName>
        <label>Old Value - Total Spend Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Old_Value_Volume__c</fullName>
        <label>Old Value - Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spend Activity</label>
        <referenceTo>EUR_ISP_Spend_Activity__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spend Item</label>
        <referenceTo>EUR_ISP_Spend_Item__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Wine_Spirits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wine/Spirits</label>
        <referenceTo>EUR_CRM_Wine_Spirits__c</referenceTo>
        <relationshipLabel>Volume Change Histories (EU)</relationshipLabel>
        <relationshipName>Volume_Change_Histories_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volume Change History (EU)</label>
    <nameField>
        <displayFormat>VCH-{00000000}</displayFormat>
        <label>Volume Change History (EU) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Change Histories (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ISP_DE_Volume_Change_History_Layout</fullName>
        <active>true</active>
        <label>DE Volume Change History</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend_Volume_Change_History_Layout</fullName>
        <active>true</active>
        <label>iSpend Volume Change History</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>